# hackton-

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  setup_demo.sh  setup_usdc.sh  test_lottery_devnet.js
arisan_protocol/: .gitignore  Anchor.toml  PITCH.md  README.md  package.json  test_lottery_devnet.js
arisan_protocol/migrations/: deploy.js
arisan_protocol/programs/arisan_protocol/: Cargo.toml
arisan_protocol/programs/arisan_protocol/src/: errors.rs  lib.rs
arisan_protocol/programs/arisan_protocol/src/instructions/: buy_lottery_ticket.rs  claim_lottery_prize.rs  claim_unlocked.rs  draw_lottery.rs  draw_winner.rs  init_creator_lottery.rs  initialize_group.rs  join_group.rs  mod.rs  pay_dues.rs  slash_defaulter.rs
arisan_protocol/programs/arisan_protocol/src/state/: creator_lottery.rs  group.rs  locked_payout.rs  mod.rs  reputation.rs
arisan_protocol/tests/: arisan_protocol.ts
docs/: PITCH.md  README.md  diagram_mekanisme_arisan.md  implementation_plan.md  pending_implementation.md  walkthrough.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CreateGroupModal.tsx  Dashboard.tsx  GroupDetail.tsx  Hero.tsx  LotteryDashboard.tsx  LotteryDetail.tsx  Toast.tsx
frontend/src/hooks/: useArisan.ts
frontend/src/idl/: arisan_protocol.json
