[package]
name = "arisan-protocol"
version = "0.1.0"
description = "Decentralized Arisan Protocol on Solana with Delayed Payout & Dynamic Reputation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arisan_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
